--- a/slip-0044.md
+++ b/slip-0044.md
@@ -499,7 +499,7 @@ index | hexa       | symbol | coin
 468   | 0x800001d4 |        |
 469   | 0x800001d5 |        |
 470   | 0x800001d6 |        |
-471   | 0x800001d7 |        |
+471   | 0x800001d7 | NYZO   | [nyzo](https://nyzo.co)
 472   | 0x800001d8 |        |
 473   | 0x800001d9 |        |
 474   | 0x800001da |        |
